--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_WorkingWeekAndWage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_WorkingWeekAndWage.cshtml
@@ -62,7 +62,7 @@
         <details>
             <summary>Wages explained</summary>
             <div class="detail-content">
-                The current National Minimum Wage (NMW) for apprentices is £@Wages.ApprenticeMinimumWage per hour.<br />
+                The current National Minimum Wage (NMW) for apprentices is £@Wages.Ranges[0].ApprenticeMinimumWage per hour.<br />
                 This rate applies to apprentices aged 16 to 18 and those aged 19 or over who are in their first year.<br />
                 Apprentices must be paid at least the NMW for their age if they're aged 19 or over and have completed their first year.
             </div>
@@ -74,7 +74,7 @@
         <details>
             <summary>Wages explained</summary>
             <div class="detail-content">
-                The current National Minimum Wage rates are £@Wages.Between18And20NationalMinimumWage for 18 to 20 year-olds and £@Wages.Over21NationalMinimumWage for anyone aged 21 and over.<br />
+                The current National Minimum Wage rates are £@Wages.Ranges[0].Between18And20NationalMinimumWage for 18 to 20 year-olds and £@Wages.Ranges[0].Over21NationalMinimumWage for anyone aged 21 and over.<br />
                 Apprentices are paid for their normal working hours and training that’s part of their apprenticeship (usually one day per week).
             </div>
         </details>
