--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_wage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_wage.cshtml
@@ -1,5 +1,4 @@
 ﻿@using SFA.Apprenticeships.Domain.Entities.Vacancies
-@using SFA.Apprenticeships.Infrastructure.Presentation.Constants
 
 @model ApprenticeshipVacancyDetailViewModel
 
@@ -12,23 +11,10 @@
 
 @if (Model.Wage.Type == WageType.ApprenticeshipMinimum)
 {
-    <details>
-        <summary>Wages explained</summary>
-        <div class="detail-content">
-            The current National Minimum Wage (NMW) for apprentices is £@Wages.GetWageRangeFor(Model.ClosingDate).ApprenticeMinimumWage per hour.<br />
-            This rate applies to apprentices aged 16 to 18 and those aged 19 or over who are in their first year.<br />
-            Apprentices must be paid at least the NMW for their age if they're aged 19 or over and have completed their first year.
-        </div>
-    </details>
+    @Html.Partial("_ApprenticeMinimumWageExplained", Model.StartDate)
 }
 
 @if (Model.Wage.Type == WageType.NationalMinimum)
 {
-    <details>
-        <summary>Wages explained</summary>
-        <div class="detail-content">
-            The current National Minimum Wage rates are £@Wages.GetWageRangeFor(Model.ClosingDate).Between18And20NationalMinimumWage for 18 to 20 year-olds and £@Wages.GetWageRangeFor(Model.ClosingDate).Over21NationalMinimumWage for anyone aged 21 and over.<br />
-            Apprentices are paid for their normal working hours and training that’s part of their apprenticeship (usually one day per week).
-        </div>
-    </details>
+    @Html.Partial("_NationalMinimumWageExplained", Model.StartDate)
 }
