--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_WorkingWeekAndWage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_WorkingWeekAndWage.cshtml
@@ -57,28 +57,15 @@
         @Html.Partial(EditLinkViewModel.PartialView, Html.GetEditLinkViewModel(Model, m => m.FurtherVacancyDetailsViewModel.Wage.Type, Model.SummaryLink, Model.FurtherVacancyDetailsViewModel.WageComment))
     </div>
 
-    var closingDate = Model.FurtherVacancyDetailsViewModel.VacancyDatesViewModel.ClosingDate.Date;
+    var possibleStartDate = Model.FurtherVacancyDetailsViewModel.VacancyDatesViewModel.PossibleStartDate.Date;
 
     if (Model.FurtherVacancyDetailsViewModel.Wage.Type == WageType.ApprenticeshipMinimum)
     {
-        <details>
-            <summary>Wages explained</summary>
-            <div class="detail-content">
-                The current National Minimum Wage (NMW) for apprentices is £@(Wages.GetWageRangeFor(closingDate).ApprenticeMinimumWage) per hour.<br />
-                This rate applies to apprentices aged 16 to 18 and those aged 19 or over who are in their first year.<br />
-                Apprentices must be paid at least the NMW for their age if they're aged 19 or over and have completed their first year.
-            </div>
-        </details>
+        @Html.Partial("_ApprenticeMinimumWageExplained", possibleStartDate)
     }
 
     if (Model.FurtherVacancyDetailsViewModel.Wage.Type == WageType.NationalMinimum)
     {
-        <details>
-            <summary>Wages explained</summary>
-            <div class="detail-content">
-                The current National Minimum Wage rates are £@(Wages.GetWageRangeFor(closingDate).Between18And20NationalMinimumWage) for 18 to 20 year-olds and £@(Wages.GetWageRangeFor(closingDate).Over21NationalMinimumWage) for anyone aged 21 and over.<br />
-                Apprentices are paid for their normal working hours and training that’s part of their apprenticeship (usually one day per week).
-            </div>
-        </details>
+        @Html.Partial("_NationalMinimumWageExplained", possibleStartDate)
     }
 }
