--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_WorkingWeekAndWage.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_WorkingWeekAndWage.cshtml
@@ -40,7 +40,7 @@
         <h3 class="bold-small">
             @if (Model.FurtherVacancyDetailsViewModel.Wage.Type == WageType.Custom)
             {
-                <span>
+                <span id="furthervacancydetailsviewmodel_wage_amount">
                     @Model.FurtherVacancyDetailsViewModel.Wage.Unit.GetHeaderDisplayText()
                     @Html.Partial(ValidationResultViewModel.PartialView, Html.GetValidationResultViewModel(Model, m => m.FurtherVacancyDetailsViewModel.Wage.Type, ViewData.ModelState, Model.SummaryLink, Model.FurtherVacancyDetailsViewModel.WageComment))
                 </span>
