ra-38: Added a new field in the view to include vacancy reference number for traineeshipsearch

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Index.cshtml
@@ -18,6 +18,8 @@
 
                 @Html.FormTextFor(m => m.Location, hintHtmlAttributes: new { id = "geoLocateContainer" })
 
+               @Html.FormTextFor(m=>m.ReferenceNumber, controlHtmlAttributes: new { type = "number" })
+
                 <div class="form-group">
                     <button class="button" id="search-button">Search</button>
                 </div>
