--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Index.cshtml
@@ -12,7 +12,7 @@
 
     <div class="grid-wrapper controls-3-4">
         <section class="grid grid-2-3">
-            @using (Html.BeginRouteForm(CandidateRouteNames.TraineeshipResults, FormMethod.Get, new { @id = "#searchForm" }))
+            @using (Html.BeginRouteForm(CandidateRouteNames.TraineeshipSearch, FormMethod.Post, new { @id = "#searchForm" }))
             {
                 @Html.Partial("ValidationSummary", ViewData.ModelState)
 
