ra-38: When exact match is found the load the vacancy details page.

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/TraineeshipSearch/Index.cshtml
@@ -18,7 +18,7 @@
 
                 @Html.FormTextFor(m => m.Location, hintHtmlAttributes: new { id = "geoLocateContainer" })
 
-               @Html.FormTextFor(m=>m.ReferenceNumber, controlHtmlAttributes: new { type = "number" })
+               @Html.FormTextFor(m=>m.ReferenceNumber, controlHtmlAttributes: new { type = "text" })
 
                 <div class="form-group">
                     <button class="button" id="search-button">Search</button>
