--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -95,10 +95,10 @@
 
                     <p class="med-btm-margin">
                         <button type="submit" class="button-link" name="Review" value="ReviewRejectCandidate">
-                            Send unsuccessful decision
+                            Inform this candidate that their application has been unsuccessful
                         </button>
                         <button type="submit" class="button-link" name="Review" value="ReviewAppointCandidate">
-                            Send successful decision
+                            Confirm this candidate that their application has been successful
                         </button>
                     </p>
                 </div>
