--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmUnsuccessfulDecision.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmUnsuccessfulDecision.cshtml
@@ -16,16 +16,15 @@
 
     <div>
         <div class="hgroup">
-            <h1 class="heading-xlarge med-btm-margin">Send unsuccessful decision</h1>
+            <h1 class="heading-xlarge med-btm-margin">Confirm decision - unsuccessful</h1>
         </div>
 
-        <p>Confirm @Model.ApplicantDetails.Name's application has been unsuccessful. Your decision can't be reversed.</p>
         <p>An automated message will now be sent to the candidate to inform them they have not been selected for this role.</p>
-
+        <p>Your decision can't be reversed within the recruit an apprentice system once this message has been sent.</p>
         <section>
             <div class="form-group">
                 <button type="submit" class="button" name="SendUnsuccessfulDecision" value="SendUnsuccessfulDecision">
-                    Confirm
+                    Send
                 </button>
                 <p class="med-btm-margin">
                     @Html.RouteLink("Cancel", RecruitmentRouteNames.ReviewApprenticeshipApplication, Model.ApplicationSelection.RouteValues)
