ra-129: apprenticeship/traineeship application review headers

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/TraineeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/TraineeshipApplication/Review.cshtml
@@ -40,8 +40,8 @@
 
     <div>
         <div class="hgroup">
-            <h1 class="heading-xlarge med-btm-margin">Opportunity application</h1>
-            <p class="subtitle">@Model.Vacancy.Title</p>
+            <h1 class="heading-xlarge med-btm-margin">@Model.Vacancy.Title</h1>
+            <p class="subtitle">@Model.Vacancy.EmployerName</p>
             <!--<p>
                 <a href="live-apprenticeship-summary.html">Traineeship summary</a>
             </p>-->
