--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_LoginPartial.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_LoginPartial.cshtml
@@ -7,12 +7,17 @@
         <div class="small-btm-margin">
             <a id="signout-link" href="@Url.RouteUrl(RecruitmentRouteNames.SignOut)"><i class="fa fa-sign-out"></i>Sign out</a>
         </div>
-        @if (User.IsInRole(Roles.VerifiedEmail) && (ViewBag.ShowHomeLink == null || ViewBag.ShowHomeLink))
-        {
-            <div>
+
+        <div>
+            @if (User.IsInRole(Roles.Admin))
+            {
+                <a class="account-link" id="adminLink" href="@Url.RouteUrl(RecruitmentRouteNames.AdminList)">Admin</a>
+            }
+            @if (User.IsInRole(Roles.VerifiedEmail) && (ViewBag.ShowHomeLink == null || ViewBag.ShowHomeLink))
+            {
                 <a class="account-link" id="applicationsLink" href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome)">Home</a>
-            </div>
-        }
+            }
+        </div>
     </div>
 }
 else
