--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
@@ -4,7 +4,7 @@
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 
-@using (Html.BeginRouteForm(RecruitmentRouteNames.VacancySummary, FormMethod.Post))
+@using (Html.BeginRouteForm(Model.Status.CanManageVacancyDates() ? RecruitmentRouteNames.ManageDates : RecruitmentRouteNames.VacancySummary, FormMethod.Post))
 {
     @Html.HiddenFor(m => m.AutoSaveTimeoutInSeconds)
     @Html.DisplayFor(m => m, FurtherVacancyDetailsViewModel.PartialView)
@@ -19,11 +19,18 @@
     }
 
     <div class="grid grid-1-2">
-        <button id="vacancySummaryButton" type="submit" class="button no-autosave" name="VacancySummary" value="@saveButtonValue">@saveButtonText</button>
-        <button id="vacancySummaryAndExit" type="submit" class="button-link no-autosave" name="VacancySummary" value="VacancySummaryAndExit">Save and exit</button>
+        @if (Model.Status.CanManageVacancyDates())
+        {
+            <button class="button" type="submit">Save and return</button>
+        }
+        else
+        {
+            <button id="vacancySummaryButton" type="submit" class="button no-autosave" name="VacancySummary" value="@saveButtonValue">@saveButtonText</button>
+            <button id="vacancySummaryAndExit" type="submit" class="button-link no-autosave" name="VacancySummary" value="VacancySummaryAndExit">Save and exit</button>
+        }
         @if (Model.ComeFromPreview)
         {
-            @Html.RouteLink("Cancel", RecruitmentRouteNames.PreviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new {@class = "no-autosave" })
+            @Html.RouteLink("Cancel", RecruitmentRouteNames.PreviewVacancy, new {vacancyReferenceNumber = Model.VacancyReferenceNumber}, new {@class = "no-autosave"})
         }
     </div>
 }
