--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/TrainingDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/TrainingDetails.cshtml
@@ -26,4 +26,6 @@
             $("#apprenticeship-level-container").show();
         });
     </script>
+        
+    @Html.Partial("HtmlTextEditor")
 }
