Moved candidate search view models to common

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Search.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Search.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Web.Mvc.Html
 @using SFA.Apprenticeships.Web.Manage.Constants
-@using SFA.Apprenticeships.Web.Manage.ViewModels
-@model SFA.Apprenticeships.Web.Manage.ViewModels.CandidateSearchResultsViewModel
+@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Candidate
+@model CandidateSearchResultsViewModel
 
 @{
     ViewBag.Title = "Search for candidate";
