--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -329,6 +329,18 @@
                             <button id="search-vacancies-button" class="button" name="SearchVacanciesAction" value="SearchVacancies">Search</button>
                         </div>
                     </details>
+                    <details>
+                        <summary>Search candidates</summary>
+                        <div class="detail-content">
+                            <div class="form-group">
+                                @Html.FormTextFor(m => m.CandidateSearch.ApplicantId, controlHtmlAttributes: new { type = "text", spellcheck = "false" })
+                                @Html.FormTextFor(m => m.CandidateSearch.FirstName, controlHtmlAttributes: new { type = "text", spellcheck = "false" })
+                                @Html.FormTextFor(m => m.CandidateSearch.LastName, controlHtmlAttributes: new { type = "text", spellcheck = "false" })
+                                @Html.FormTextFor(m => m.CandidateSearch.Postcode, controlHtmlAttributes: new { type = "text", spellcheck = "false" })
+                            </div>
+                            <button id="search-candidates-button" class="button" name="SearchCandidatesAction" value="SearchCandidates">Search</button>
+                        </div>
+                    </details>
                     <nav class="tabbed-nav">
                         @{
                             var apprenticeshipsTabControlClass = Model.VacanciesSummary.VacanciesSummarySearch.VacancyType == VacancyType.Apprenticeship ? " active" : "";
