--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -287,3 +287,16 @@ table#rightLocationAddressesTable{
 .delete-vacancy-link{
     margin-left: 10px;
 }
+
+.candidate-results-count {
+	font-weight: bold;
+}
+
+.candidate-name {
+	font-weight: bold;
+}
+
+.candidate-address {
+  list-style-type: none;
+  padding: 0;
+}
