--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Search.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Search.cshtml
@@ -91,7 +91,7 @@
                         {
                             <tr>
                                 <td class="candidate-name">@candidate.Name</td>
-                                <td>@candidate.DateOfBirth.ToDateOfBirthString()</td>
+                                <td>@candidate.ApplicantId</td>
                                 <td>
                                     <ul class="candidate-address">
                                         <li>@candidate.Address.AddressLine1</li>
