Candidate's applications page

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Candidate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Candidate.cshtml
@@ -2,8 +2,7 @@
 @using SFA.Apprenticeships.Domain.Entities.Applications
 @using SFA.Apprenticeships.Domain.Entities.Vacancies
 @using SFA.Apprenticeships.Web.Manage.Constants
-@using SFA.Apprenticeships.Web.Manage.ViewModels
-@model CandidateApplicationsViewModel
+@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Candidate.CandidateApplicationsViewModel
 
 @{
     ViewBag.Title = "Candidate applications";
