--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Candidate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Candidate.cshtml
@@ -55,7 +55,7 @@
                     var employerSortClass = orderByEmployer ? Model.CandidateApplicationsSearch.Order == Order.Ascending ? "fa-sort-up" : "fa-sort-down" : "fa-sort";
                 }
                 <a href="@Url.RouteUrl(RecruitmentRouteNames.ViewCandidate, new CandidateApplicationsSearchViewModel(Model.CandidateApplicationsSearch, CandidateApplicationsSearchViewModel.OrderByFieldEmployer, employerNewOrder).RouteValues)" class="vacancy-filter">
-                    <span class="font-black">Vacancy title <i class="fa @employerSortClass" aria-hidden="true"></i></span>
+                    <span class="font-black">Employer <i class="fa @employerSortClass" aria-hidden="true"></i></span>
                 </a>
             </th>
             <th>
@@ -90,7 +90,7 @@
         {
             <tr class="applicant">
                 <td>
-                    <h4 class="applicant-name">@applicationSummary.VacancyTitle</h4>
+                    <a href="@Url.RouteUrl(RecruitmentRouteNames.PreviewVacancy, new {vacancyReferenceNumber = applicationSummary.VacancyReferenceNumber})">@applicationSummary.VacancyTitle</a>
                 </td>
                 <td>
                     @applicationSummary.EmployerName
@@ -146,7 +146,6 @@
     </a>
 
 </div>
-}
 
 @section scripts
 {
